fix: reduce wave3 static-analysis baseline